# cinemaquery

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  todo.md
.github/workflows/: ci.yml
skill/: SKILL.md
src/cineamoquery/: __init__.py  cli.py  client.py
src/cinemaquery/: __init__.py  cli.py  client.py  interactive.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_interactive.py
