[project]
name = "cineamoquery"
version = "0.1.0"
description = "CLI to query the Cineamo public API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cineamoquery dev" }]
keywords = ["cineamo", "cli", "api"]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13.7",
  "tomli-w>=1.0; python_version>='3.11'",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "ruff>=0.6",
  "pytest>=8",
  "pytest-playwright>=0.5",
]

[project.scripts]
cineamo = "cineamoquery.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","PL","RUF"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
pretty = true
show_error_codes = true

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"
