[project]
name = "cinemaquery"
version = "0.1.0"
description = "CLI to query the Cineamo public API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cinemaquery dev" }]
keywords = ["cineamo", "cinema", "cli", "api"]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13.7",
  "simple-term-menu>=1.6",
  "tomli>=2.0; python_version<'3.11'",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "ruff>=0.6",
  "pytest>=8",
]

[project.scripts]
cinemaquery = "cinemaquery.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","PL","RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "PLR2004"]  # Allow long lines and magic values in tests

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
pretty = true
show_error_codes = true

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"
